tests/semantic/fail/dereferencing_pointer2incomplete_type.c
struct S;

int main(void) {
  struct S *sptr;
  *sptr;
  return 0;
}
